--- a/AlgorithmsTests/AlgorithmsTests.csproj
+++ b/AlgorithmsTests/AlgorithmsTests.csproj
@@ -67,17 +67,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Resources\fibonacci.txt" />
-    <Content Include="Resources\million.txt" />
-    <Content Include="Resources\milRevSort.txt" />
-    <Content Include="Resources\milSort.txt" />
-    <Content Include="Resources\revSort.txt" />
-    <Content Include="Resources\sorted.txt" />
-    <Content Include="Resources\unsorted.txt" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MSTest.TestAdapter">
@@ -98,6 +90,24 @@
     <PackageReference Include="NUnit3TestAdapter">
       <Version>3.13.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\FIBONACCI.txt" />
+    <Content Include="Resources\NUMS-MILLION-SORTED.txt" />
+    <Content Include="Resources\NUMS-MILLION-SORTED_REVERSE.txt" />
+    <Content Include="Resources\NUMS-TEN_MILLION-SORTED.txt" />
+    <Content Include="Resources\NUMS-TEN_MILLION-SORTED_REVERSE.txt" />
+    <Content Include="Resources\NUMS-TEN_MILLION.txt" />
+    <Content Include="Resources\NUMS-TEN_THOUSAND-SORTED.txt" />
+    <Content Include="Resources\NUMS-TEN_THOUSAND-SORTED_REVERSE.txt" />
+    <Content Include="Resources\NUMS-TEN_THOUSAND.txt" />
+    <Content Include="Resources\NUMS_MILLION.txt" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
